[project]
name = "dsxindexer"
version = "1.1.0"
authors = [
  { name="fangyunsm", email="934476300@qq.com" },
]
description = "dsxindexer 是一个指标生成器，支持常用指标，自定义扩展指标算法，公式编辑功能"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dsxkline/dsxindexer"
"Bug Tracker" = "https://github.com/dsxkline/dsxindexer/issues"